fixed media qurey on mobile version

--- a/style/mobile.css
+++ b/style/mobile.css
@@ -1,4 +1,4 @@
-@media (min-width: 375px) and (max-width: 768px) {
+@media (max-width: 768px) {
   .head {
     flex-direction: column;
     align-items: center;
